// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "TimeSeriesIdPB";

/*
 * An implementation of the net.opentsdb.data.TimeSeriesStringId class.
 */
message TimeSeriesId {
  /* An optional alias. */
  string alias = 1;

  /* An optional namespace. */
  string namespace = 2;
  
  /* A metric name. */
  string metric = 3;
  
  /* A map of tag keys to values. */
  map<string, string> tags = 4;
  
  /* An optional list of aggregated tags. */
  repeated string aggregated_tags = 6;
  
  /* An optional list of disjoint tags. */
  repeated string disjoint_tags = 7;
  
  /* An optional list of unique IDs. */
  repeated string unique_ids = 8;
  
  /* Whether or not the ID has been encoded. */
  bool encoded = 9;
}