// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "TimeSeriesSharedTagsAndTimeDataPB";

import "google/protobuf/any.proto";
import "TimeStamp.proto";

/*
 * A collection of zero or more segments of data.
 */
message TimeSeriesSharedTagsAndTimeData {

  message DataType {
    /* The type of data. This should contain the serialized name of the
	 * data type from net.opentsdb.data.TimeSeriesDataType's type token. */
    string type = 1;
	 
	/* The encoded data type. */
    google.protobuf.Any data = 2;
  }
  
  message DataList {
    repeated DataType list = 1;
  }
    
  /* The timestamp */
  TimeStamp timestamp = 1;
  
  /* An optional namespace. */
  string namespace = 2;
  
  /* A map of tag keys to values. */
  map<string, string> tags = 3;
  
  /* The multi-map of a metric to values. */
  map<string, DataList> data = 4;
}